# Get-Your-utils

./: .env.deploy.template  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
get_your_utils/: clone_user.py  run_extracts.py
get_your_utils/powershell/dev_deploy/: .env.template  BuildDeployDocker.ps1
get_your_utils/powershell/docker_deploy/: .env.template  BuildDeployDocker.ps1
get_your_utils/powershell/prod_deploy/: .env.template  BuildDeployDocker.ps1
get_your_utils/python/: clone_user.py  run_extracts.py
