[project]
name = "get-your-utils"
version = "5.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9.0"
dependencies = [
    "azure-storage-blob~=12.26.0",
    "coftc-cred-man",
    "coftc-file-utils",
    "coftc-logging-utils",
    "numpy==1.19.5",
    "pandas==1.2.4",
    "pendulum~=3.1.0",
    "psycopg2~=2.9.0",
    "python-dotenv~=1.0.0",
    "typer[all]~=0.9.0",
]

[tool.uv.sources]
coftc-file-utils = { path = "../dist/coftc_file_utils-3.0.2-py3-none-any.whl" }
coftc-logging-utils = { path = "../dist/coftc_logging_utils-2.0.3-py3-none-any.whl" }
coftc-cred-man = { path = "../dist/coftc_cred_man-4.1.2-py3-none-any.whl" }
